terraform/03-workloads/modules/gateway/manifests/http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${app_name}-http-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: ${app_name}-http
      hostname: ${domain}
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
