terraform/03-workloads/modules/gateway/manifests/tcp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${app_name}-tcp-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: ${app_name}-tcp
      port: ${container_port}
      protocol: TCP
